build logic